package at.fhooe.mc.ada.core.util

object TestTags {

    const val DESCENDING_FILTER_CHIP = "DESCENDING_FILTER_CHIP"
    const val ASCENDING_FILTER_CHIP = "ASCENDING_FILTER_CHIP"

    const val CARD_NAME_FILTER_CHIP = "CARD_NAME_FILTER_CHIP"
    const val DATE_ADDED_FILTER_CHIP = "DATE_ADDED_FILTER_CHIP"
    const val CARD_HOLDER_NAME_FILTER_CHIP = "CARD_HOLDER_NAME_FILTER_CHIP"

    const val FAB_CARD_SCREEN_ADD = "FAB_CARD_SCREEN_ADD"
    const val TEXTFIELD_CARD_ADD_TITLE = "TEXTFIELD_CARD_ADD_TITLE"
    const val BUTTON_ADD_NEW_CARD = "BUTTON_ADD_NEW_CARD"
}